# HNG

./: .gitignore  README.md
Stage 0/: .env.example  README.md  Task.md  requirements.txt
Stage 0/app/: config.py  limiter.py  main.py  routes.py  schemas.py  services.py
Stage 0/tests/: conftest.py  test_me.py
Stage 1/: README.md  Task.md  requirements.txt
Stage 1/app/: NLP.py  db.py  main.py  routes.py  schemas.py  services.py
Stage 1/tests/: conftest.py  test_endpoints.py  test_nlp.py  test_services.py
Stage 2/: .env.example  .gitignore  README.md  Task.md  alembic.ini  dev.db  requirements.txt
Stage 2/alembic/: env.py
Stage 2/alembic/versions/: 6b9fcb035eae_database_reset.py
Stage 2/app/: config.py  crud.py  database.py  logging.py  main.py  models.py  schemas.py
Stage 2/app/routes/: countries.py  status.py
Stage 2/app/services/: country_service.py  crud.py  fetch_data.py  image_generator.py
Stage 2/tests/: test_api_endpoints.py  test_endpoints.py  test_services.py
Stage 3/: .env.example  .gitignore  README.md  Task.md  alembic.ini  pyproject.toml
Stage 3/alembic/: env.py
Stage 3/alembic/versions/: 20251031_000001_initial_schema.py  3c3408197173_consolidated_schema_with_reminders.py  5c20efb07450_database_reset.py  840708d8dbd1_add_reminder_fields_and_user_table.py
Stage 3/app/: config.py  crud.py  database.py  main.py  models.py  routes.py  schemas.py  services.py
Stage 3/app/features/reminders/: __init__.py  service.py
Stage 3/app/models/: a2a.py  models.py
Stage 3/app/services/: common.py  journal_service.py  llm_service.py  task_service.py  telex_service.py
Stage 3/app/utils/: __init__.py  a2a_helpers.py  json_logger.py  llm.py  telex_push.py
Stage 3/tests/: conftest.py  test_a2a.py  test_a2a_followup.py  test_async_modes.py  test_missing_resources_soft_errors.py  test_plan_actions_parsing.py  test_planner_executor.py  test_reminder_service.py  test_string_ids.py  test_unknown_intent.py
