[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reflective-assistant"
version = "0.1.0"
description = "Reflective Assistant - Journal & Todo AI agent (FastAPI)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic",
    "python-dotenv",
    "psycopg2-binary",
    "openai",
    "groq",
    "alembic",
    "mysql-connector-python>=9.5.0",
    "pymysql>=1.1.2",
    "aiosqlite>=0.21.0",
    "aiomysql>=0.3.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
